--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,11 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
+  <main>
 
+  
   00 Home
   01 Destination
   02 Crew
@@ -22,6 +24,6 @@
   because we’ll give you a truly out of this world experience!
 
   Explore
-
+</main>
 </body>
 </html>
