--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,24 +6,27 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;600&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
   <main>
+    <img src="assets/shared/logo.svg" alt="star-logo" class="logo">  
+    <img src="assets/shared/icon-hamburger.svg" alt="hamburger-icon" class="nav-burger" id="nav-burger">  
+    <div class="navlist" id="navlist">
+      <div class="navitems">00 Home</div>
+      <div class="navitems">01 Destination</div>
+      <div class="navitems">02 Crew</div>
+      <div class="navitems">03 Technology</div>
+    </div>
+     <div class="sotext">SO, YOU WANT TO TRAVEL TO</div>
+      <div class="space">SPACE</div>
+      <p>Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</p>
 
-  
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to 
-  outer space and not hover kind of on the edge of it. Well sit back, and relax 
-  because we’ll give you a truly out of this world experience!
-
-  Explore
+      <div class="explore">Explore</div>
 </main>
+<script src="index.js"></script>
 </body>
 </html>
