--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
       <div class="navitems"><b>02</b> Crew</div>
       <div class="navitems"><b>03</b> Technology</div>
     </div>
-    <div class="spacepara">
-      <h1>SO, YOU WANT TO TRAVEL TO</h1>
-      <h2>SPACE</h2>
-      <p>Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</p>
-      <h3>EXPLORE</h3>
+    <div class="home">
+        <div class="spacepara">
+          <h1>SO, YOU WANT TO TRAVEL TO</h1>
+          <h2>SPACE</h2>
+          <p>Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</p>
+        </div>
+        <h3>EXPLORE</h3>
     </div>
+    
   </main>
 <script src="index.js"></script>
 </body>
