--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
-  <main>
+  <main id="main">
     <div class="header">
       <img src="assets/shared/logo.svg" alt="star-logo" class="logo">  
       <hr>
       <img src="assets/shared/icon-hamburger.svg" alt="hamburger-icon" class="nav-burger" id="nav-burger">
       <div class="navlist" id="navlist">
-        <div class="navitems"><b>00</b> Home</div>
-        <div class="navitems"><b>01</b> Destination</div>
-        <div class="navitems"><b>02</b> Crew</div>
-        <div class="navitems"><b>03</b> Technology</div>
+        <div class="navitems" id="link-home"><span><b>00</b></span><span>HOME</span></div>
+        <div class="navitems" id="link-destination"><span><b>01</b></span><span>DESTINATION</span></div>
+        <div class="navitems" id="link-crew"><span><b>02</b></span><span>CREW</span></div>
+        <div class="navitems" id="link-tech"><span><b>03</b></span><span>TECHNOLOGY</span></div>
       </div>
     </div>
     
